# carbon

./: .gitignore  .gitmodules  Cargo.toml  README.md  age_pareto.py  black_theme.py  brownian.py  main.py  metrics.csv  mut_only_metrics.csv  plot.py  pyproject.toml  simple_ga.py  toy_afpo.py  use.py  use_karel.py
optimization/: functions.py  multi_objective.py  opt.py  show.py  single_objective.py
src/: generic_ga.rs  generic_ga_mut_only.rs  lib.rs  regev.rs  simple_ga.rs
