[package]
name = "carbon"
version = "0.0.0"
authors = ["LSaldyt <lucassaldyt@gmail.com>"]
edition = "2021"

[lib]
name = "carbon"
crate-type = ["cdylib"]

[dependencies.ordered-float]
version = "2.0"

[dependencies.itertools]
version = "0.10.0"

[dependencies.rand]
version = "0.8.3"

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

