[tool.poetry]
name = "carbon"
version = "0.0.0"
description = "Basic genetic algorithms in Rust"
authors = ["LSaldyt <lucassaldyt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.5.0"
pandas = "^1.4.0"
numpy = "^1.22.2"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
